--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 08:05:02 2018</p>
+         Last Run: Mon Nov  5 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>24</td>
+                        <td>35</td>
                         <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>19</td>
-                        <td>75</td>
+                        <td>30</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
-                        <td>-9</td>
-                        <td>10</td>
-                        <td>76</td>
+                        <td>-10</td>
+                        <td>16</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>94</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-9"
+                 "-10"
                ]
              },
              {
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "19",
-                 "10"
+                 "35",
+                 "30",
+                 "16"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "75",
-                 "75",
-                 "76"
+                 "77",
+                 "77"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "96",
-                 "96",
-                 "94"
+                 "97",
+                 "98",
+                 "96"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 08:05:02 2018</p>
+         Last Run: Mon Nov  5 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -258,8 +258,8 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-11</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>3</td>
                         <td>71</td>
                         <td>0</td>
@@ -273,7 +273,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
-                 "-11",
+                 "-13",
                  "-13"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-8",
-                 "-8",
+                 "-9",
                  "-9"
                ]
              }
@@ -388,7 +388,7 @@
                "data":[
                  "70",
                  "71",
-                 "71"
+                 "72"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 08:05:02 2018</p>
+         Last Run: Mon Nov  5 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -480,7 +480,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -492,7 +492,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "60",
-                 "60",
-                 "58"
+                 "61",
+                 "59"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 08:05:02 2018</p>
+         Last Run: Mon Nov  5 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>15</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
+                 "50",
                  "48",
                  "47"
                ]
