--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 10:05:02 2018</p>
+         Last Run: Mon Nov  5 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,21 +34,21 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>35</td>
-                        <td>75</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>98</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>31</td>
-                        <td>77</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NE</td>
                         <td>98</td>
                      </tr>
@@ -57,8 +57,8 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>16</td>
-                        <td>77</td>
+                        <td>15</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "35",
-                 "31",
-                 "16"
+                 "24",
+                 "15"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "77",
-                 "77"
+                 "74",
+                 "76",
+                 "76"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
+                 "98",
                  "98",
                  "96"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 10:05:02 2018</p>
+         Last Run: Mon Nov  5 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
+                 "71",
                  "71",
                  "72"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "18",
-                 "18"
+                 "7",
+                 "9",
+                 "8"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 10:05:02 2018</p>
+         Last Run: Mon Nov  5 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -464,35 +464,35 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>55</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>16</td>
-                        <td>NNW</td>
-                        <td>60</td>
+                        <td>14</td>
+                        <td>NW</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>-1</td>
-                        <td>2</td>
-                        <td>53</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>NNW</td>
-                        <td>61</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>67</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>49</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "0"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
                  "53",
-                 "51"
+                 "52",
+                 "49"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "61",
-                 "58"
+                 "64",
+                 "67",
+                 "66"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 10:05:02 2018</p>
+         Last Run: Mon Nov  5 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>15</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>15</td>
-                        <td>48</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>NW</td>
-                        <td>82</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>15</td>
                         <td>47</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>62</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>15</td>
+                        <td>46</td>
+                        <td>1</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>78</td>
+                        <td>NW</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
                  "48",
-                 "47"
+                 "47",
+                 "46"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "82",
-                 "78"
+                 "65",
+                 "62",
+                 "57"
                ]
              }
            ]
