--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 12:05:02 2018</p>
+         Last Run: Mon Nov  5 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,34 +30,34 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>36</td>
+                        <td>24</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>24</td>
-                        <td>75</td>
+                        <td>21</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NE</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>15</td>
+                        <td>14</td>
                         <td>74</td>
                         <td>0</td>
                         <td>8</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "36",
                  "24",
-                 "15"
+                 "21",
+                 "14"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "75",
+                 "73",
                  "74"
                ]
              },
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "98",
+                 "97",
+                 "97",
                  "96"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 12:05:02 2018</p>
+         Last Run: Mon Nov  5 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -253,19 +253,19 @@
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-8</td>
+                        <td>-11</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
-                        <td>9</td>
+                        <td>WSW</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
-                 "-13",
+                 "-11",
                  "-13"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-8",
-                 "-9",
+                 "-8",
                  "-9"
                ]
              }
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "70",
+                 "69",
                  "70"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "9",
-                 "8"
+                 "6",
+                 "8",
+                 "7"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 12:05:02 2018</p>
+         Last Run: Mon Nov  5 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>53</td>
+                        <td>5</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>65</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>0</td>
-                        <td>2</td>
-                        <td>52</td>
+                        <td>-1</td>
+                        <td>6</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>NNW</td>
-                        <td>67</td>
+                        <td>14</td>
+                        <td>NW</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>49</td>
+                        <td>5</td>
+                        <td>52</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>NNW</td>
-                        <td>66</td>
+                        <td>13</td>
+                        <td>NW</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "0"
                ]
              },
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "5",
+                 "6",
+                 "5"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "55",
                  "53",
-                 "52",
-                 "49"
+                 "52"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
                  "67",
-                 "66"
+                 "71",
+                 "70"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 12:05:02 2018</p>
+         Last Run: Mon Nov  5 13:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -679,9 +679,9 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>15</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>65</td>
                      </tr>
@@ -689,24 +689,24 @@
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NW</td>
                         <td>62</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>15</td>
                         <td>46</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>NW</td>
+                        <td>11</td>
+                        <td>NNW</td>
                         <td>57</td>
                      </tr>
                   </tbody>
@@ -735,8 +735,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-2",
-                 "-2"
+                 "-3",
+                 "-1"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "0",
                  "1",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "49",
                  "48",
-                 "47",
                  "46"
                ]
              },
